--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-Hello!
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="description" content="Isaac Goldberg is a San Francisco-based software engineer.">
+    <meta name="keywords" content="Isaac Goldberg software engineer Brown University Dropbox">
+    <meta name="author" content="Isaac Goldberg">
+    <title>Isaac Goldberg | San Francisco-based software engineer</title>
+    <script src="jquery-1.10.1.min.js" type="text/javascript"></script>
+    <script src="main.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="stylesheet" href="animation.css" type="text/css">
+    <link rel="shortcut icon" href="https://www.goldberg.io/favicon.ico">
+</head>
+<body>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W81DH9MQYV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-W81DH9MQYV');
+    </script>
+
+    <div id="header">
+        <div id="name">
+            <a href="/" title="Isaac Goldberg">Isaac Goldberg</a>
+        </div>
+        <div id="desc">
+            San Francisco-based software engineer
+        </div>
+    </div>
+    <div id="links">
+        <ul>
+            <li id="header-email">
+                <img src="email.png" style="margin-right: 8px;" alt="Email Isaac Goldberg">
+                <a href="mailto:isaac@goldberg.io" title="Email Isaac Goldberg">isaac@goldberg.io</a>
+                <img src="linkedin.png" alt="Isaac Goldberg on LinkedIn">
+                <a href="http://www.linkedin.com/in/isaacgoldberg/" title="Isaac Goldberg on LinkedIn">LinkedIn</a>
+            </li>
+        </ul>
+    </div>
+    <div id="main">
+
+    <span class="img_left" style="background: url(headshot.jpg); width: 429px; height: 285px; margin-bottom: 2em;"></span>
+
+    <h1>Hi!</h1>
+
+
+    <p>I am a San Francisco-based software engineer. Originally from Burlington, Vermont, I've lived in the Bay Area since 2013. Today I am an engineer at <a href="http://figma.com/" class="linkExternal">Figma</a>, formerly a staff engineer at <a href="http://www.dropbox.com/" class="linkExternal">Dropbox</a>.
+
+    </p><p>When I'm not working on code, you might find me in a local musical theatre production! I also enjoy skiing, traveling, and worshipping terrible Harrison Ford movies.
+
+    </p><p>Feel free to reach out!</p>
+
+    </div>
+
+
+<div id="footer">
+    Copyright © <span id="year">2024</span> Isaac Goldberg. Feel free to <a href="mailto:isaac@goldberg.io">contact me</a>. Hosted on Github.
+</div>
+
+
+</body></html>
