--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div id="main">
 
-    <span class="img_left" style="background: url(headshot.jpg); width: 429px; height: 285px; margin-bottom: 2em;"></span>
+    <span class="img_left" style="background: url(headshot.jpg); background-size: 430px 285px; width: 430px; height: 285px; margin-bottom: 2em;"></span>
 
     <h1>Hi!</h1>
 
