--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <p>I am a San Francisco-based software engineer. Originally from Burlington, Vermont, I've lived in the Bay Area since 2013. Today I am an engineer at <a href="http://figma.com/" class="linkExternal">Figma</a>, formerly a staff engineer at <a href="http://www.dropbox.com/" class="linkExternal">Dropbox</a>.
 
-    </p><p>When I'm not working on code, you might find me in a local musical theatre production! I also enjoy skiing, traveling, and worshipping terrible Harrison Ford movies.
+    </p><p>You might also find me performing in <a href="https://www.rayoflighttheatre.com/" class="linkExternal">local musical theatre</a> or singing with <a href="https://www.iocsf.org/" class="linkExternal">IOCSF</a>.
 
     </p><p>Feel free to reach out!</p>
 
