--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="main.js" type="text/javascript"></script>
     <link rel="stylesheet" href="main.css" type="text/css">
     <link rel="stylesheet" href="animation.css" type="text/css">
-    <link rel="shortcut icon" href="https://www.goldberg.io/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-W81DH9MQYV"></script>
